# CLIP-ImageSearch-NCNN

./: README.md
android/ncnn-android-nanodet/: build.gradle
android/ncnn-android-nanodet/app/: build.gradle
android/ncnn-android-nanodet/app/src/main/: AndroidManifest.xml
android/ncnn-android-nanodet/app/src/main/jni/: CMakeLists.txt  clip.cpp  clip.h  clipis.cpp
android/ncnn-android-nanodet/app/src/main/jni/opencv-mobile-4.5.4-android/sdk/native/jni/: OpenCVConfig-version.cmake  OpenCVConfig.cmake
android/ncnn-android-nanodet/app/src/main/jni/opencv-mobile-4.5.4-android/sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules.cmake
android/ncnn-android-nanodet/app/src/main/jni/opencv-mobile-4.5.4-android/sdk/native/jni/include/opencv2/core/: bindings_utils.hpp
android/ncnn-android-nanodet/app/src/main/res/layout/: main.xml
android/ncnn-android-nanodet/app/src/main/res/values/: strings.xml
android/ncnn-android-nanodet/gradle/wrapper/: gradle-wrapper.properties
x86/vs2019_ncnn_opencv-mobile_Qt_nanodet/vs2019_ncnn_opencv-mobile_Qt_nanodet/: clip.cpp  clip.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  vs2019_ncnn_opencv-mobile_Qt_nanodet.vcxproj
x86/vs2019_ncnn_opencv-mobile_Qt_nanodet/vs2019_ncnn_opencv-mobile_Qt_nanodet/assets/: clip.param
x86/vs2019_ncnn_opencv-mobile_Qt_nanodet/vs2019_ncnn_opencv-mobile_Qt_nanodet/ncnn/include/ncnn/: layer_type_enum.h  platform.h
x86/vs2019_ncnn_opencv-mobile_Qt_nanodet/vs2019_ncnn_opencv-mobile_Qt_nanodet/ncnn/lib/: ncnn.lib
(+3 files in other folders)
